# grooved

./: .travis.yml  CMakeLists.txt  Makefile  README.md  README.rst  genindex.html  go.mod  go.sum  groovectl.1.html  groovectl.html  grooved.1.html  grooved.html  index.html  objects.inv  search.html  searchindex.js
_sources/: groovectl.rst.txt  groovectl.txt  grooved.rst.txt
bus/: service.go
cmd/groovectl/: groovectl.go
cmd/grooved/: grooved.go
debian/: changelog  control  copyright  rules  watch
docs/: conf.py  groovectl.1  groovectl.1.md  grooved.1  grooved.1.md  grooved.rst
etc/: groovectl.bash-completion  groovectl.zsh-completion  grooved-mmkeys.service  grooved-notify.service  grooved.service  io.github.ghedo.grooved.service
etc/scripts/: notify.lua
player/: mpv.go  player.go
src/: client.c  client.h  config.c  config.h  config.h.in  dbus-common.c  dbus-common.h  dbus-grooved.xml  dbus-notify.xml  dbus-service.c  dbus-service.h  dbus-service.xml  dbus.c  dbus.h  dbus.xml  groovectl.c  groovectl.sh  grooved-mmkeys.c  grooved-notify.c  grooved.c  grooved.h  library.c  library.h  player.c  player.h  printf.c  printf.h  util.h  x11.c  x11.h
src/bus/: service.go
src/main/groovectl/: groovectl.go
src/main/grooved/: grooved.go
src/notify/: notify.go
src/player/: mpv.go  player.go
src/scripts/: notify.lua
src/util/: util.go
